--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-	<title>Raleway - Creative Animated Template</title>
+	<title>Moxx Designs Aplication</title>
 <!--
 Raleway Template 
 http://www.templatemo.com/preview/templatemo_421_raleway
@@ -20,7 +20,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 			<div class="row">
 				<div class="col-md-4">
 					<div class="site-branding">
-						<a href="#"><h1>Raleway</h1></a>
+						<a href="#"><h1>Moxx Designs</h1></a>
 					</div>
 				</div>
 				<a href="#" class="toggle-nav hidden-md hidden-lg">
@@ -29,20 +29,20 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 				<div class="col-md-8">
 					<nav id="nav" class="main-navigation hidden-xs hidden-sm">
 						<ul class="main-menu">
-							<li><a class="show-1 active homebutton" href="#">Home</a></li>
-							<li><a class="show-2 aboutbutton" href="#">About Us</a></li>
-							<li><a class="show-3 projectbutton" href="#">Projects</a></li>
-							<li><a class="show-4 blogbutton" href="#">Blog Entries</a></li>
-							<li><a class="show-5 contactbutton" href="#">Contact</a></li>
+							<li><a class="show-1 active homebutton" href="#">Inicio</a></li>
+							<li><a class="show-2 aboutbutton" href="#">Sobre nosotros</a></li>
+							<li><a class="show-3 projectbutton" href="#">Proyectos</a></li>
+							<li><a class="show-4 blogbutton" href="#">Entradas de blog</a></li>
+							<li><a class="show-5 contactbutton" href="#">Contactanos</a></li>
 						</ul>
 					</nav>
 					<nav class="main-navigation menu-responsive hidden-md hidden-lg">
 						<ul class="main-menu">
-							<li><a class="show-1 active homebutton" href="#">Home</a></li>
-							<li><a class="show-2 aboutbutton" href="#">About Us</a></li>
-							<li><a class="show-3 projectbutton" href="#">Projects</a></li>
-							<li><a class="show-4 blogbutton" href="#">Blog Entries</a></li>
-							<li><a class="show-5 contactbutton" href="#">Contact</a></li>
+							<li><a class="show-1 active homebutton" href="#">Inicio</a></li>
+							<li><a class="show-2 aboutbutton" href="#">Sobre nosotros</a></li>
+							<li><a class="show-3 projectbutton" href="#">Proyectos</a></li>
+							<li><a class="show-4 blogbutton" href="#">Entradas de blog</a></li>
+							<li><a class="show-5 contactbutton" href="#">Contactanos</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -54,8 +54,8 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 	<div id="menu-container">
 		<div id="menu-1" class="homepage home-section container">
 			<div class="home-intro text-center">
-				<h2 class="welcome-title animated fadeInLeft">Introduction</h2>
-				<p class="animated fadeInRight">Raleway HTML5 template is provided by <span class="blue">template</span><span class="green">mo</span>. Credit goes to <a href="http://unsplash.com">Unsplash</a> for photos. Feel free to modify and use this layout for any personal or commercial website.</p>
+				<h2 class="welcome-title animated fadeInLeft">Introduccion</h2>
+				<p class="animated fadeInRight">Una gran compañia dedicada a hacer tus ideas realidad, con diseños <span class="green">unicos e inovadores</span> desde personalizar tu amado vehiculo hasta decorar tu negocio.</p>
 				<ul class="list-icons animated fadeInUp">
 					<li><i class="icon-trophy"></i></li>
 					<li><i class="icon-badge"></i></li>
@@ -67,8 +67,8 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 				<div class="row">
 					<div class="col-md-6 col-sm-12">
 						<div class="project-title animated fadeInUp">
-							<h2>Latest Projects</h2>
-							<p>Sed eu turpis vehicula, iaculis sapien eu, molestie libero. Cras ac urna in neque commodo sodales vel et dolor. Pellentesque aliquam semper lectus, nec consequat ex lacinia nec. <br><br>Nunc eget velit nec felis ultrices vulputate venenatis interdum arcu. In ac auctor quam. </p>
+							<h2>Ultimos proyectos</h2>
+							<p>Aqui podras ver algunos de nuestro ultimos proyectos, cada uno tiene su propio diseño totalmente unico y personalizado, echale un vistaso y animate a mejorar tu vehiculo o negocio.</p>
 							<a href="#" class="pink-button">Continue Journal</a>
 						</div>
 					</div>
@@ -78,7 +78,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 								<div class="project-item one animated fadeInRight">
 									<img src="img/1.jpg" alt="">
 									<div class="overlay">
-										<h4><a href="#">Project One</a></h4>
+										<h4><a href="#">CAN-AM (MAVERICK)</a></h4>
 									</div>
 								</div>
 							</div>
@@ -86,7 +86,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 								<div class="project-item two animated fadeInRight">
 									<img src="img/2.jpg" alt="">
 									<div class="overlay">
-										<h4><a href="#">Project Two</a></h4>
+										<h4><a href="#">Harley-Davison (V-ROD)</a></h4>
 									</div>
 								</div>
 							</div>
@@ -94,7 +94,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 								<div class="project-item three animated fadeInRight">
 									<img src="img/3.jpg" alt="">
 									<div class="overlay">
-										<h4><a href="#">Project Three</a></h4>
+										<h4><a href="#">YAMAHA (MT-07)</a></h4>
 									</div>
 								</div>
 							</div>
@@ -102,7 +102,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 								<div class="project-item four animated fadeInRight">
 									<img src="img/4.jpg" alt="">
 									<div class="overlay">
-										<h4><a href="#">Project Four</a></h4>
+										<h4><a href="#">FORD (LOBO)</a></h4>
 									</div>
 								</div>
 							</div>
@@ -118,8 +118,8 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3">
 						<div class="inner-story animated fadeInRight text-center">
-							<h2>ABOUT US</h2>
-							<p>Cras placerat, est ac sollicitudin laoreet, ante enim egestas lorem, vel auctor nibh massa sit amet lacus. Cras mollis tellus id sollicitudin vulputate. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam gravida arcu</p>
+							<h2>Sobre nososotros</h2>
+							<p>Creamos lo que imaginas y diseñamos lo que quieres, no hay limites si se trata de palzmar tu imaginacion, desde autos, motos y barcos hasta tu negocio y espectaculares, solo habla con nosotros</p>
 						</div>
 					</div>
 				</div>
@@ -130,7 +130,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<div class="offer-title animated fadeInDown">
-								<h2>OUR WORK</h2>
+								<h2>Nuestros trabajos</h2>
 							</div>
 						</div>
 					</div>
@@ -143,8 +143,8 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 									<img src="img/a1.jpg" alt="">
 								</figure>
 								<div class="offer-content text-center">
-									<h4>HAPPY WORKING WITH US</h4>
-									<p>Sed sagittis nunc vel tellus ultricies auctor. Class aptent taciti sociosqu ad litora torquent per conubia , per inceptos himenaeos. Integer eleifend tellu.</p>
+									<h4>Trabajar con nosotros</h4>
+									<p>Nos enfocamos en entender que es lo que quieres y amamos tus ideas como si fueran propias, plazmamos a detalle lo que quieres o hacemos lo que no sabias que querias</p>
 									<span class="offer-left"><i></i></span>
 									<span class="offer-right"><i></i></span>
 								</div>
@@ -156,8 +156,8 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 									<img src="img/a2.jpg" alt="">
 								</figure>
 								<div class="offer-content text-center">
-									<h4>OUR COMPANY BACKGROUND</h4>
-									<p>Sed sagittis nunc vel tellus ultricies auctor. Class aptent taciti sociosqu ad litora torquent per conubia , per inceptos himenaeos. Integer eleifend tellu.</p>
+									<h4>La empresa sin filtros</h4>
+									<p>Somos una familia amantes de los motores y lo unicas, trabajamos como familia y como un gran equipo, conocenos individualmente o en conujunto</p>
 									<span class="offer-left"><i></i></span>
 									<span class="offer-right"><i></i></span>
 								</div>
@@ -170,7 +170,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 
 		<div id="menu-3" class="content project-section container">
 			<div class="projects-header">
-				<h2 class="animated fadeInRight">Our projects</h2>
+				<h2 class="animated fadeInRight">Nuestros proyectos</h2>
 				<p class="animated fadeInLeft">Sed sagittis nunc vel tellus ultricies auctor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend tellus ut porttitor pharetra.</p>
 			</div>
 			<div class="projects-holder">
@@ -239,7 +239,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 
 		<div id="menu-4" class="content blog-section container">
 			<div class="blog-header text-center">
-				<h2 class="animated fadeInRight">Blog entries</h2>
+				<h2 class="animated fadeInRight">Entradas de blog</h2>
 				<p class="animated fadeInLeft">Sed sagittis nunc vel tellus ultricies auctor. Class aptent taciti sociosqu ad litora torquent per.</p>
 				<a href="#" class="blog-button animated fadeInUp">continue journal</a>
 			</div>
@@ -300,7 +300,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 					</div>
 					<div class="col-md-6 col-sm-12">
 						<div class="contact-form animated fadeInUp">
-							<h4>Send us a Message</h4>
+							<h4>Mandanos mensaje</h4>
 							<div class="row">
 								<fieldset class="col-md-6">
 									<input type="text" name="name" placeholder="Your name">
@@ -331,7 +331,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 			<div class="col-md-12">
 				<div class="main-footer">
 					<ul class="social">
-						<li><a href="#">Facebook</a></li>
+						<li><a href="https://www.facebook.com/share/2UKRoVRuDh7qht2A/">Facebook</a></li>
 						<li><a href="#">Twitter</a></li>
 						<li><a href="#">Instagram</a></li>
 					</ul>
@@ -340,7 +340,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 		</div>
 		<div class="row">
 			<div class="col-md-12 copyright">
-				<p>Copyright &copy; 2084 <a href="#">Company Name</a></p>
+				<p>Copyright &copy; 2024 <a href="#">Moxx Designs</a></p>
 			</div>
 		</div>
 	</footer>
