--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 	<link rel="stylesheet" href="css/simple-line-icons.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/templatemo_style.css">
+	<link rel="icon" type="image/x-icon" href="img/moxxlogo.jpg">
 </head>
 <body>
 	<header class="site-header container animated fadeInDown">
 		<div class="header-wrapper">
 			<div class="row">
 				<div class="col-md-4">
-					<div class="site-branding">
-						<a href="#"><h1>Moxx Designs</h1></a>
+					<div style="display: flex;" class="site-branding">
+						<img src="img/moxxlogo.jpg" width="50px" style="margin-right: 5px;"><a href="#"><h1>Moxx Designs</h1></a>
 					</div>
 				</div>
 				<a href="#" class="toggle-nav hidden-md hidden-lg">
