--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 							<li><a class="show-1 active homebutton" href="#">Inicio</a></li>
 							<li><a class="show-2 aboutbutton" href="#">Sobre nosotros</a></li>
 							<li><a class="show-3 projectbutton" href="#">Proyectos</a></li>
-							<li><a class="show-4 blogbutton" href="#">Entradas de blog</a></li>
 							<li><a class="show-5 contactbutton" href="#">Contactanos</a></li>
 						</ul>
 					</nav>
@@ -42,7 +41,6 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 							<li><a class="show-1 active homebutton" href="#">Inicio</a></li>
 							<li><a class="show-2 aboutbutton" href="#">Sobre nosotros</a></li>
 							<li><a class="show-3 projectbutton" href="#">Proyectos</a></li>
-							<li><a class="show-4 blogbutton" href="#">Entradas de blog</a></li>
 							<li><a class="show-5 contactbutton" href="#">Contactanos</a></li>
 						</ul>
 					</nav>
@@ -70,14 +68,16 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						<div class="project-title animated fadeInUp">
 							<h2>Ultimos proyectos</h2>
 							<p>Aqui podras ver algunos de nuestro ultimos proyectos, cada uno tiene su propio diseño totalmente unico y personalizado, echale un vistaso y animate a mejorar tu vehiculo o negocio.</p>
-							<a href="#" class="pink-button">Continue Journal</a>
+								<ul class="main-menu">
+									<li><a class="pink-button show-3 projectbutton" href="#">Proyectos</a></li>
+								</ul>
 						</div>
 					</div>
 					<div class="project-home-holder col-md-6 col-sm-12">
 						<div class="row">
 							<div class="col-md-6 col-sm-6">
 								<div class="project-item one animated fadeInRight">
-									<img src="img/1.jpg" alt="">
+									<img src="img/maverick2.jpeg" alt="">
 									<div class="overlay">
 										<h4><a href="#">CAN-AM (MAVERICK)</a></h4>
 									</div>
@@ -93,7 +93,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 							</div>
 							<div class="col-md-6 col-sm-6">
 								<div class="project-item three animated fadeInRight">
-									<img src="img/3.jpg" alt="">
+									<img src="img/mt-072.jpg" alt="">
 									<div class="overlay">
 										<h4><a href="#">YAMAHA (MT-07)</a></h4>
 									</div>
@@ -141,7 +141,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						<div class="col-md-6">
 							<div class="offer-item offer-1 animated fadeInLeft">
 								<figure>
-									<img src="img/a1.jpg" alt="">
+									<img src="img/collage.png" alt="">
 								</figure>
 								<div class="offer-content text-center">
 									<h4>Trabajar con nosotros</h4>
@@ -154,7 +154,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						<div class="col-md-6">
 							<div class="offer-item offer-2 animated fadeInRight">
 								<figure>
-									<img src="img/a2.jpg" alt="">
+									<img src="img/moxxlogo1.jpg" alt="">
 								</figure>
 								<div class="offer-content text-center">
 									<h4>La empresa sin filtros</h4>
@@ -178,25 +178,25 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 				<div class="row">
 					<div class="col-md-4 col-sm-6 p-1 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/1.jpg" alt="">
+							<img src="img/250zrojaamarillo.jpeg" alt="">
 							<div class="overlay">
-								<h4><a href="#">Project One</a></h4>
+								<h4><a href="#">250Z</a></h4>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6 p-2 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/2.jpg" alt="">
+							<img src="img/spdfazul.jpeg" alt="">
 							<div class="overlay">
-								<h4><a href="#">Project Two</a></h4>
+								<h4><a href="#">Dinamo SpeedFire</a></h4>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6 p-3 animated umScaleIn">
 						<div class="project-item">
-							<img src="img/3.jpg" alt="">
+							<img src="img/shakymoto.jpeg" alt="">
 							<div class="overlay">
-								<h4><a href="#">Project Three</a></h4>
+								<h4><a href="#">Shay Moto</a></h4>
 							</div>
 						</div>
 					</div>
@@ -204,33 +204,33 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 				<div class="row">
 					<div class="col-md-3 col-sm-6 p-4 animated umScaleIn">
 						<div class="project-item animated umScaleIn">
-							<img src="img/4.jpg" alt="">
+							<img src="img/mt16.jpeg" alt="">
 							<div class="overlay">
-								<h4><a href="#">Project Four</a></h4>
+								<h4><a href="#">MT-16</a></h4>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="project-item p-5 animated umScaleIn">
-							<img src="img/5.jpg" alt="">
+							<img src="img/maverick.jpeg" alt="">
 							<div class="overlay">
-								<h4><a href="#">Project Five</a></h4>
+								<h4><a href="#">Maverick</a></h4>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="project-item p-6 animated umScaleIn">
-							<img src="img/6.jpg" alt="">
+							<img src="img/cbrfinal2.jpeg" alt="">
 							<div class="overlay">
-								<h4><a href="#">Project Six</a></h4>
+								<h4><a href="#">CBR-600</a></h4>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="project-item p-7 animated umScaleIn">
-							<img src="img/7.jpg" alt="">
+							<img src="img/ft250rojoamarillo.jpeg" alt="">
 							<div class="overlay">
-								<h4><a href="#">Project Seven</a></h4>
+								<h4><a href="#">FT-250</a></h4>
 							</div>
 						</div>
 					</div>
@@ -238,7 +238,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 			</div>
 		</div>
 
-		<div id="menu-4" class="content blog-section container">
+		<!-- <div id="menu-4" class="content blog-section container">
 			<div class="blog-header text-center">
 				<h2 class="animated fadeInRight">Entradas de blog</h2>
 				<p class="animated fadeInLeft">Sed sagittis nunc vel tellus ultricies auctor. Class aptent taciti sociosqu ad litora torquent per.</p>
@@ -278,13 +278,13 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 
 		<div id="menu-5" class="content contact-section container">
 			<div class="contact-header text-center">
-				<h2 class="animated fadeInLeft">Get in Touch</h2>
-				<p class="animated fadeInRight">Feel free to talk to us about anything.</p>
+				<h2 class="animated fadeInLeft">Contactanos</h2>
+				<p class="animated fadeInRight">Sientete libre de describirnos tu idea.</p>
 				<ul class="contact-social animated fadeInUp">
 					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 					<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
@@ -296,7 +296,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 				<div class="row">
 					<div class="col-md-6 col-sm-12">
 			            <div class="googlemap-wrapper animated fadeInLeft">
-                            <div id="map_canvas" class="map-canvas"></div>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d884.8434851685762!2d-109.9477813062001!3d27.48874368614309!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86c815f78df174e5%3A0xe0d9c153ab46739b!2sC.%2020%20de%20Noviembre%20825%2C%20Cumuripa%2C%2085140%20Cdad.%20Obreg%C3%B3n%2C%20Son.!5e0!3m2!1ses-419!2smx!4v1730838668403!5m2!1ses-419!2smx" width="550" height="510" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
 					</div>
 					<div class="col-md-6 col-sm-12">
@@ -304,19 +304,19 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 							<h4>Mandanos mensaje</h4>
 							<div class="row">
 								<fieldset class="col-md-6">
-									<input type="text" name="name" placeholder="Your name">
+									<input type="text" name="name" placeholder="Nombre">
 								</fieldset>
 								<fieldset class="col-md-6">
-									<input type="email" name="email" placeholder="Your name">
+									<input type="email" name="email" placeholder="Correo">
 								</fieldset>
 								<fieldset class="col-md-12">
-									<input type="text" name="subject" placeholder="Subject">
+									<input type="text" name="subject" placeholder="Mensaje...">
 								</fieldset>
 								<fieldset class="col-md-12">
-									<textarea name="message" id="message" cols="30" rows="10" placeholder="Describe your Project"></textarea>
+									<textarea name="message" id="message" cols="30" rows="10" placeholder="Describe tus ideas"></textarea>
 								</fieldset>
 								<fieldset class="col-md-12">
-									<a href="#" class="message-button">Submit Message</a>
+									<a href="#" class="message-button">Enviar mensaje</a>
 								</fieldset>
 							</div>
 						</div>
