Se eliminaron img que no se utilizarian

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						<div class="project-title animated fadeInUp">
 							<h2>Ultimos proyectos</h2>
 							<p>Aqui podras ver algunos de nuestro ultimos proyectos, cada uno tiene su propio diseño totalmente unico y personalizado, echale un vistaso y animate a mejorar tu vehiculo o negocio.</p>
-								<ul class="main-menu">
+								<!-- <ul class="main-menu">
 									<li><a class="pink-button show-3 projectbutton" href="#">Proyectos</a></li>
-								</ul>
+								</ul> -->
 						</div>
 					</div>
 					<div class="project-home-holder col-md-6 col-sm-12">
@@ -238,7 +238,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 			</div>
 		</div>
 
-		<!-- <div id="menu-4" class="content blog-section container">
+		<div id="menu-4" class="content blog-section container">/
 			<div class="blog-header text-center">
 				<h2 class="animated fadeInRight">Entradas de blog</h2>
 				<p class="animated fadeInLeft">Sed sagittis nunc vel tellus ultricies auctor. Class aptent taciti sociosqu ad litora torquent per.</p>
@@ -278,7 +278,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						</div>
 					</div>
 				</div>
-			</div> -->
+			</div>
 		</div>
 
 		<div id="menu-5" class="content contact-section container">
