se modifico el fondo y se eliminaron links sin usar

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						<div class="project-item">
 							<img src="img/shakymoto.jpeg" alt="">
 							<div class="overlay">
-								<h4><a href="#">Shay Moto</a></h4>
+								<h4><a href="#">Shaky Moto</a></h4>
 							</div>
 						</div>
 					</div>
@@ -332,9 +332,8 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 			<div class="col-md-12">
 				<div class="main-footer">
 					<ul class="social">
-						<li><a href="https://www.facebook.com/share/2UKRoVRuDh7qht2A/">Facebook</a></li>
-						<li><a href="#">Twitter</a></li>
-						<li><a href="#">Instagram</a></li>
+						<li><a target="_blank" href="https://www.facebook.com/share/2UKRoVRuDh7qht2A/">Facebook</a></li>
+						<li><a target="_blank" href="https://www.youtube.com/@moxxdesigns2784">Youtube</a></li>
 					</ul>
 				</div>
 			</div>
