--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/templatemo_style.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="icon" type="image/x-icon" href="img/moxxlogo.jpg">
+	<link rel="icon" type="image/x-icon" href="img/LOGOMD1.jpeg">
 </head>
 <body>
 	<div class="main-container">
@@ -23,7 +23,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 				<div class="row">
 					<div class="col-md-4">
 						<div style="display: flex;" class="site-branding">
-							<img src="img/moxxlogo.jpg" width="50px" style="margin-right: 5px;"><a href="#"><h1>Moxx Designs</h1></a>
+							<img src="img/LOGOMD.jpeg" width="300px" style="margin-right: 5px;"><a href="#"></a>
 						</div>
 					</div>
 					<a href="#" class="toggle-nav hidden-md hidden-lg">
@@ -79,7 +79,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 							<div class="row">
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item one animated fadeInRight">
-										<img src="img/maverick2.jpeg" alt="">
+										<img src="img/canammaverick.jpeg" alt="">
 										<div class="overlay">
 											<h4><a href="#">CAN-AM (MAVERICK)</a></h4>
 										</div>
@@ -87,9 +87,9 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 								</div>
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item two animated fadeInRight">
-										<img src="img/2.jpg" alt="">
+										<img src="img/yamahaPramac.jpeg" alt="">
 										<div class="overlay">
-											<h4><a href="#">Harley-Davison (V-ROD)</a></h4>
+											<h4><a href="#">YAMAHA (PRAMAC MOTO GP)</a></h4>
 										</div>
 									</div>
 								</div>
@@ -103,9 +103,9 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 								</div>
 								<div class="col-md-6 col-sm-6">
 									<div class="project-item four animated fadeInRight">
-										<img src="img/4.jpg" alt="">
+										<img src="img/dt296.jpeg" alt="">
 										<div class="overlay">
-											<h4><a href="#">FORD (LOBO)</a></h4>
+											<h4><a href="#">TUNIGN (DTXXX SPORT)</a></h4>
 										</div>
 									</div>
 								</div>
@@ -188,7 +188,7 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						</div>
 						<div class="col-md-4 col-sm-6 p-2 animated umScaleIn">
 							<div class="project-item">
-								<img src="img/spdfazul.jpeg" alt="">
+								<img src="img/canammaverick.jpeg" alt="">
 								<div class="overlay">
 									<h4><a href="#">Dinamo SpeedFire</a></h4>
 								</div>
@@ -230,9 +230,9 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 						</div>
 						<div class="col-md-3 col-sm-6">
 							<div class="project-item p-7 animated umScaleIn">
-								<img src="img/ft250rojoamarillo.jpeg" alt="">
+								<img src="img/250zmoradapro.jpeg" alt="">
 								<div class="overlay">
-									<h4><a href="#">FT-250</a></h4>
+									<h4><a href="#">250Z MORADO CANDY</a></h4>
 								</div>
 							</div>
 						</div>
