--- a/MoxxDesignsWebApp/src/main/webapp/pages/cotizacion.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/cotizacion.html
@@ -43,6 +43,9 @@
                             <span id="cart-count" class="cart-count">0</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Iniciar Sesión</a>
+                    </li>
                 </ul>
             </div>
         </div>
