--- a/MoxxDesignsWebApp/src/main/webapp/pages/proyectos.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/proyectos.html
@@ -41,6 +41,9 @@
                         <a class="nav-link" href="carrito.html">🛒 Carrito</a>
                     </li>
                 </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">Iniciar Sesión</a>
+                </li>
             </div>
         </div>
     </nav>
