--- a/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="carrito.html">🛒 Carrito</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Iniciar Sesión</a>
+                    </li>
                 </ul>
             </div>
         </div>
