--- a/MoxxDesignsWebApp/src/main/webapp/pages/contactanos.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/contactanos.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="../styles/footer.css" rel="stylesheet">
     <link href="../styles/contactanos.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../img/LOGOMD1.jpeg">
 </head>
 
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">EMPRESA XYZ</a>
+            <div style="display: flex;" class="site-branding">
+                <img src="../img/LOGOMD.jpeg" width="300" style="margin-right: 5px;"><a href="#"></a>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -91,25 +94,25 @@
                 <div class="col-lg-5">
                     <div class="contact-info-card">
                         <h5><span class="contact-icon">📍</span> Dirección</h5>
-                        <p class="mb-0">Av. Principal #123, Ciudad</p>
+                        <p class="mb-0">Calle 20 de Noviembre #825, C. Obregón Son.</p>
                     </div>
                     <div class="contact-info-card">
                         <h5><span class="contact-icon">📞</span> Teléfono</h5>
-                        <p class="mb-0">+1 234 567 890</p>
+                        <p class="mb-0">6441 59 32 53</p>
                     </div>
                     <div class="contact-info-card">
                         <h5><span class="contact-icon">✉️</span> Email</h5>
-                        <p class="mb-0">contacto@empresaxyz.com</p>
+                        <p class="mb-0">moxxdesigns@gmail.com</p>
                     </div>
                     <div class="contact-info-card">
                         <h5><span class="contact-icon">⏰</span> Horario</h5>
-                        <p class="mb-0">Lunes a Viernes: 9:00 AM - 6:00 PM</p>
+                        <p class="mb-0">Lunes a Sabado 10:00 AM - 6:00 PM</p>
                     </div>
 
                     <!-- Google Maps -->
                     <div class="map-container">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.0!2d-99.1332!3d19.4326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTnCsDI1JzU3LjQiTiA5OcKwMDcnNTkuNSJX!5e0!3m2!1ses!2smx!4v1620000000000!5m2!1ses!2smx"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d884.8434851685762!2d-109.9477813062001!3d27.48874368614309!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86c815f78df174e5%3A0xe0d9c153ab46739b!2sC.%2020%20de%20Noviembre%20825%2C%20Cumuripa%2C%2085140%20Cdad.%20Obreg%C3%B3n%2C%20Son.!5e0!3m2!1ses-419!2smx!4v1730838668403!5m2!1ses-419!2smx"
                             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy">
                         </iframe>
                     </div>
@@ -126,26 +129,26 @@
                     <h5>Ubicación</h5>
                     <p>
                         <i class="fas fa-map-marker-alt me-2"></i>
-                        Av. Principal #123<br>
-                        Ciudad Ejemplo, CP 12345
+                        Calle 20 de Noviembre #825<br>
+                        C. Obregón, Son.
                     </p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Contacto</h5>
                     <p>
                         <i class="fas fa-phone me-2"></i>
-                        +1 234 567 8900<br>
+                        6441 59 32 53<br>
                         <i class="fas fa-envelope me-2"></i>
-                        contacto@empresaxyz.com
+                        moxxdesigns@gmial.com
                     </p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Síguenos</h5>
                     <div class="social-icons">
-                        <a href="https://facebook.com" target="_blank" class="me-3">
+                        <a href="https://www.facebook.com/moxxdesigns/" target="_blank" class="me-3">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://youtube.com" target="_blank">
+                        <a href="https://www.youtube.com/@moxxdesigns2784" target="_blank">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
@@ -153,7 +156,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center mt-3">
-                    <p class="mb-0">&copy; 2024 Empresa XYZ. Todos los derechos reservados.</p>
+                    <p class="mb-0">&copy; 2024 MoxxDesigns. Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
