--- a/MoxxDesignsWebApp/src/main/webapp/pages/index.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="../styles/footer.css" rel="stylesheet">
     <link href="../styles/index.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../img/LOGOMD1.jpeg">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">EMPRESA XYZ</a>
+            <div style="display: flex;" class="site-branding">
+                <img src="../img/LOGOMD.jpeg" width="300" style="margin-right: 5px;"><a href="#"></a>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,8 +54,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 hero-text">
-                    <h1 class="display-4 mb-4">Innovación y Excelencia en Cada Proyecto</h1>
-                    <p class="lead mb-4">Transformamos ideas en soluciones extraordinarias. Nuestra pasión por la excelencia nos impulsa a crear resultados excepcionales.</p>
+                    <h1 class="display-4 mb-4">Innovación y Excelencia en Cada Trabajo</h1>
+                    <p class="lead mb-4">Una gran compañia dedicada a hacer tus ideas realidad, con diseños unicos e inovadores desde personalizar tu amado vehiculo hasta decorar tu negocio.</p>
                     <a href="proyectos.html" class="btn btn-primary-custom">Ver Proyectos</a>
                 </div>
             </div>
@@ -69,7 +72,7 @@
                         <div class="card-body text-center">
                             <div class="feature-icon">💡</div>
                             <h5 class="card-title">Innovación</h5>
-                            <p class="card-text">Implementamos las últimas tecnologías para garantizar soluciones de vanguardia.</p>
+                            <p class="card-text">Nuestros diseños siempre estan a la moda.</p>
                         </div>
                     </div>
                 </div>
@@ -89,7 +92,7 @@
                         <div class="card-body text-center">
                             <div class="feature-icon">🎯</div>
                             <h5 class="card-title">Experiencia</h5>
-                            <p class="card-text">Años de experiencia respaldando cada uno de nuestros proyectos.</p>
+                            <p class="card-text">11 años de experiencia respaldando cada uno de nuestros proyectos.</p>
                         </div>
                     </div>
                 </div>
@@ -105,26 +108,26 @@
                     <h5>Ubicación</h5>
                     <p>
                         <i class="fas fa-map-marker-alt me-2"></i>
-                        Av. Principal #123<br>
-                        Ciudad Ejemplo, CP 12345
+                        Calle 20 de Noviembre #825<br>
+                        C. Obregón, Son.
                     </p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Contacto</h5>
                     <p>
                         <i class="fas fa-phone me-2"></i>
-                        +1 234 567 8900<br>
+                        6441 59 32 53<br>
                         <i class="fas fa-envelope me-2"></i>
-                        contacto@empresaxyz.com
+                        moxxdesigns@gmial.com
                     </p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Síguenos</h5>
                     <div class="social-icons">
-                        <a href="https://facebook.com" target="_blank" class="me-3">
+                        <a href="https://www.facebook.com/moxxdesigns/" target="_blank" class="me-3">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://youtube.com" target="_blank">
+                        <a href="https://www.youtube.com/@moxxdesigns2784" target="_blank">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
@@ -132,7 +135,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center mt-3">
-                    <p class="mb-0">&copy; 2024 Empresa XYZ. Todos los derechos reservados.</p>
+                    <p class="mb-0">&copy; 2024 MoxxDesigns. Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
