--- a/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="../styles/footer.css" rel="stylesheet">
     <link href="../styles/sobre-nosotros.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../img/LOGOMD1.jpeg">
 </head>
 
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">EMPRESA XYZ</a>
+            <div style="display: flex;" class="site-branding">
+                <img src="../img/LOGOMD.jpeg" width="300" style="margin-right: 5px;"><a href="#"></a>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,9 +57,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 position-relative">
-                    <h1 class="display-4 mb-4">Nuestra Historia</h1>
-                    <p class="lead">Desde 2010, hemos estado a la vanguardia de la innovación, construyendo soluciones
-                        que transforman negocios y crean valor para nuestros clientes.</p>
+                    <h1 class="display-4 mb-4">Sobre nosotros</h1>
+                    <p class="lead">Creamos lo que imaginas y diseñamos lo que quieres, no hay limites si se trata de palzmar tu imaginacion, desde autos, motos y barcos hasta tu negocio y espectaculares, solo habla con nosotros.</p>
                 </div>
             </div>
         </div>
@@ -65,27 +67,27 @@
     <!-- Our Values -->
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center mb-5">Nuestros Valores</h2>
+            <h2 class="text-center mb-5">Nosotros</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="value-card text-center">
                         <div class="value-icon">💫</div>
-                        <h4>Excelencia</h4>
-                        <p>Buscamos la perfección en cada proyecto, superando las expectativas de nuestros clientes.</p>
+                        <h4>Trabajar con nosotros</h4>
+                        <p>Nos enfocamos en entender que es lo que quieres y amamos tus ideas como si fueran propias, plazmamos a detalle lo que quieres o hacemos lo que no sabias que querias.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="value-card text-center">
                         <div class="value-icon">🤝</div>
-                        <h4>Integridad</h4>
-                        <p>Actuamos con honestidad y transparencia en todas nuestras operaciones.</p>
+                        <h4>La empresa sin filtros</h4>
+                        <p>Somos una familia amantes de los motores y lo unicas, trabajamos como familia y como un gran equipo, conocenos individualmente o en conujunto.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="value-card text-center">
                         <div class="value-icon">🚀</div>
                         <h4>Innovación</h4>
-                        <p>Constantemente buscamos nuevas formas de mejorar y crear soluciones únicas.</p>
+                        <p>Constantemente buscamos nuevas formas de mejorar y crear ideas únicas.</p>
                     </div>
                 </div>
             </div>
@@ -98,7 +100,7 @@
             <h2 class="text-center mb-5">Nuestra Trayectoria</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h4>2010 - Fundación</h4>
+                    <h4>2014 - Fundación</h4>
                     <p>Iniciamos operaciones con un equipo pequeño pero apasionado.</p>
                 </div>
                 <div class="timeline-item">
@@ -170,26 +172,26 @@
                     <h5>Ubicación</h5>
                     <p>
                         <i class="fas fa-map-marker-alt me-2"></i>
-                        Av. Principal #123<br>
-                        Ciudad Ejemplo, CP 12345
+                        Calle 20 de Noviembre #825<br>
+                        C. Obregón, Son.
                     </p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Contacto</h5>
                     <p>
                         <i class="fas fa-phone me-2"></i>
-                        +1 234 567 8900<br>
+                        6441 59 32 53<br>
                         <i class="fas fa-envelope me-2"></i>
-                        contacto@empresaxyz.com
+                        moxxdesigns@gmial.com
                     </p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Síguenos</h5>
                     <div class="social-icons">
-                        <a href="https://facebook.com" target="_blank" class="me-3">
+                        <a href="https://www.facebook.com/moxxdesigns/" target="_blank" class="me-3">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://youtube.com" target="_blank">
+                        <a href="https://www.youtube.com/@moxxdesigns2784" target="_blank">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
@@ -197,7 +199,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center mt-3">
-                    <p class="mb-0">&copy; 2024 Empresa XYZ. Todos los derechos reservados.</p>
+                    <p class="mb-0">&copy; 2024 MoxxDesigns. Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
