--- a/MoxxDesignsWebApp/src/main/webapp/pages/proyectos.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/proyectos.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="../styles/footer.css" rel="stylesheet">
     <link href="../styles/proyectos.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../img/LOGOMD1.jpeg">
 </head>
 
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">EMPRESA XYZ</a>
+            <div style="display: flex;" class="site-branding">
+                <img src="../img/LOGOMD.jpeg" width="300" style="margin-right: 5px;"><a href="#"></a>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,7 +55,7 @@
     <header class="projects-header">
         <div class="container">
             <h1 class="display-4">Nuestros Proyectos</h1>
-            <p class="lead">Descubre nuestra colección de proyectos exitosos y soluciones innovadoras.</p>
+            <p class="lead">Aqui podras ver algunos de nuestro ultimos proyectos, cada uno tiene su propio diseño totalmente unico y personalizado, echale un vistaso y animate a mejorar tu vehiculo o negocio..</p>
         </div>
     </header>
 
@@ -155,26 +158,26 @@
                     <h5>Ubicación</h5>
                     <p>
                         <i class="fas fa-map-marker-alt me-2"></i>
-                        Av. Principal #123<br>
-                        Ciudad Ejemplo, CP 12345
+                        Calle 20 de Noviembre #825<br>
+                        C. Obregón, Son.
                     </p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Contacto</h5>
                     <p>
                         <i class="fas fa-phone me-2"></i>
-                        +1 234 567 8900<br>
+                        6441 59 32 53<br>
                         <i class="fas fa-envelope me-2"></i>
-                        contacto@empresaxyz.com
+                        moxxdesigns@gmial.com
                     </p>
                 </div>
                 <div class="col-md-4 mb-4">
                     <h5>Síguenos</h5>
                     <div class="social-icons">
-                        <a href="https://facebook.com" target="_blank" class="me-3">
+                        <a href="https://www.facebook.com/moxxdesigns/" target="_blank" class="me-3">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://youtube.com" target="_blank">
+                        <a href="https://www.youtube.com/@moxxdesigns2784" target="_blank">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
@@ -182,7 +185,7 @@
             </div>
             <div class="row">
                 <div class="col-12 text-center mt-3">
-                    <p class="mb-0">&copy; 2024 Empresa XYZ. Todos los derechos reservados.</p>
+                    <p class="mb-0">&copy; 2024 MoxxDesigns. Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
