--- a/MoxxDesignsWebApp/src/main/webapp/pages/login.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Empresa XYZ</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="../styles/footer.css" rel="stylesheet">
@@ -33,7 +34,7 @@
                                 <input type="password" class="form-control" id="password" placeholder="********" required>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-login">Iniciar Sesión</button>
+                                <button type="button" class="btn btn-login" id="btn-login">Iniciar Sesión</button>
                             </div>
                             <div class="text-center mt-3">
                                 <a href="./index.html" class="text-muted" style="text-decoration: none;">Volver</a>
@@ -88,6 +89,8 @@
         </div>
     </footer>
 
+    <script src="../js/loginController.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
