--- a/MoxxDesignsWebApp/src/main/webapp/pages/carrito.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/carrito.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="../styles/footer.css" rel="stylesheet">
     <link href="../styles/carrito.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../img/LOGOMD1.jpeg">
+    <link rel="icon" type="image/x-icon" href="../img/LOGOMD.png">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <div style="display: flex;" class="site-branding">
-                <img src="../img/LOGOMD.jpeg" width="300" style="margin-right: 5px;"><a href="#"></a>
+                <img src="../img/LOGOMD.png" width="300" style="margin-right: 5px;"><a href="#"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
