--- a/MoxxDesignsWebApp/src/main/webapp/pages/login.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/login.html
@@ -10,7 +10,7 @@
     <link href="../styles/footer.css" rel="stylesheet">
     <link href="../styles/login.css" rel="stylesheet">
     <link href="../styles/index.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="../img/LOGOMD1.jpeg">
+    <link rel="icon" type="image/x-icon" href="../img/LOGOMD.png">
 </head>
 <body>
     
