--- a/MoxxDesignsWebApp/src/main/webapp/pages/signup.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/signup.html
@@ -42,16 +42,12 @@
                                 <label for="password" class="form-label">Contraseña</label>
                                 <input type="password" class="form-control" id="password" placeholder="********" required>
                             </div>
-                            <div class="mb-3">
-                                <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                                <input type="password" class="form-control" id="confirmPassword" placeholder="********" required>
-                            </div>
                             <div class="mb-3 form-check">
                                 <input type="checkbox" class="form-check-input" id="terms" required>
                                 <label class="form-check-label" for="terms">Acepto los términos y condiciones</label>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-signup">Crear Cuenta</button>
+                                <button type="button" class="btn btn-signup" id="btn-signup">Crear Cuenta</button>
                             </div>
                             <div class="text-center mt-3">
                                 <p class="mb-0">¿Ya tienes una cuenta? <a href="login.html" style="color: var(--primary-blue);">Iniciar Sesión</a></p>
@@ -103,6 +99,7 @@
         </div>
     </footer>
 
+    <script src="../js//signupController.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </body>
