Se editaron las fotos y descripciones del sistema

--- a/MoxxDesignsWebApp/src/main/webapp/pages/index.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/index.html
@@ -69,17 +69,17 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card feature-card shadow">
-                        <img src="/api/placeholder/400/300" class="card-img-top card-img-custom" alt="Innovación">
+                        <img src="../img/CANAMMMAVERIK.jpeg" class="card-img-top card-img-custom" alt="Innovación">
                         <div class="card-body text-center">
                             <div class="feature-icon">💡</div>
                             <h5 class="card-title">Innovación</h5>
-                            <p class="card-text">Nuestros diseños siempre estan a la moda.</p>
+                            <p class="card-text">Nuestros diseños siempre están a la moda y listos para sobresalir entre los demás.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card feature-card shadow">
-                        <img src="/api/placeholder/400/300" class="card-img-top card-img-custom" alt="Calidad">
+                        <img src="../img/CALIDAD.jpg" class="card-img-top card-img-custom" alt="Calidad">
                         <div class="card-body text-center">
                             <div class="feature-icon">⭐</div>
                             <h5 class="card-title">Calidad</h5>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card feature-card shadow">
-                        <img src="/api/placeholder/400/300" class="card-img-top card-img-custom" alt="Experiencia">
+                        <img src="../img/EXPERIENCIA.png" class="card-img-top card-img-custom" alt="Experiencia">
                         <div class="card-body text-center">
                             <div class="feature-icon">🎯</div>
                             <h5 class="card-title">Experiencia</h5>
