--- a/MoxxDesignsWebApp/src/main/webapp/pages/proyectos.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/proyectos.html
@@ -66,84 +66,85 @@
             <!-- Filter Buttons -->
             <div class="text-center filter-buttons">
                 <button class="filter-btn active" data-filter="all">Todos</button>
-                <button class="filter-btn" data-filter="web">Diseño Web</button>
-                <button class="filter-btn" data-filter="app">Aplicaciones</button>
-                <button class="filter-btn" data-filter="marketing">Marketing</button>
+                <button class="filter-btn" data-filter="YAMAHA">Yamaha</button>
+                <button class="filter-btn" data-filter="HONDA">Honda</button>
+                <button class="filter-btn" data-filter="CANAMM">Can Amm</button>
+                <button class="filter-btn" data-filter="FORD">Ford</button>
             </div>
 
             <!-- Gallery Grid -->
             <div class="row">
                 <!-- Project 1 -->
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 YAMAHA">
                     <div class="project-card">
-                        <img src="/api/placeholder/400/300" class="project-image" alt="Proyecto 1">
+                        <img src="../img/MT-07.jpg" class="project-image" alt="MT=07">
                         <div class="project-overlay">
-                            <h3 class="project-title">Diseño Web Corporativo</h3>
-                            <p class="project-description">Desarrollo de sitio web responsive con integración de CMS
-                                personalizado.</p>
-                            <a href="#" class="project-link">Ver Detalles</a>
+                            <h3 class="project-title">Pintura general y diseño sutíl</h3>
+                            <p class="project-description">Un color personalizado y un diseño totalmente
+                                unico.</p>
+                            <!--<a href="#" class="project-link">Ver Detalles</a>-->
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 2 -->
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 YAMAHA">
                     <div class="project-card">
-                        <img src="/api/placeholder/400/300" class="project-image" alt="Proyecto 2">
+                        <img src="../img/FZ16-GRIS.jpeg" class="project-image" alt="MT-16">
                         <div class="project-overlay">
-                            <h3 class="project-title">App Móvil</h3>
-                            <p class="project-description">Aplicación multiplataforma para gestión de inventarios.</p>
-                            <a href="#" class="project-link">Ver Detalles</a>
+                            <h3 class="project-title">Pintura y restauración total</h3>
+                            <p class="project-description">Moto abandonada, restaurada desde 0 y pintura original.</p>
+                            <!--<a href="#" class="project-link">Ver Detalles</a>-->
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 3 -->
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 CANAMM">
                     <div class="project-card">
-                        <img src="/api/placeholder/400/300" class="project-image" alt="Proyecto 3">
+                        <img src="../img/CANAMMMAVERIK.jpeg" class="project-image" alt="Can Amm Maverik">
                         <div class="project-overlay">
-                            <h3 class="project-title">Campaña Digital</h3>
-                            <p class="project-description">Estrategia integral de marketing digital para e-commerce.</p>
-                            <a href="#" class="project-link">Ver Detalles</a>
+                            <h3 class="project-title">Diseño a mano con aerógrafo</h3>
+                            <p class="project-description">Un can amm directo a la baja 1,000 con diseño unico y perfecto para dejar a cualquiera alucinando.</p>
+                            <!--<a href="#" class="project-link">Ver Detalles</a>-->
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 4 -->
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 YAMAHA">
                     <div class="project-card">
-                        <img src="/api/placeholder/400/300" class="project-image" alt="Proyecto 4">
+                        <img src="../img/PRAMACR1.jpeg" class="project-image" alt="Pramac R1">
                         <div class="project-overlay">
-                            <h3 class="project-title">Portal Educativo</h3>
-                            <p class="project-description">Plataforma de aprendizaje en línea con contenido interactivo.
+                            <h3 class="project-title">Un diseño digno de la MotoGP</h3>
+                            <p class="project-description">Un diseño inspirado en la escuderia de MotoGP Pramac.
                             </p>
-                            <a href="#" class="project-link">Ver Detalles</a>
+                            <!--<a href="#" class="project-link">Ver Detalles</a>-->
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 5 -->
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 FORD">
                     <div class="project-card">
-                        <img src="/api/placeholder/400/300" class="project-image" alt="Proyecto 5">
+                        <img src="../img/MUSTANGLINE.png" class="project-image" alt="Mustang Arrancones">
                         <div class="project-overlay">
-                            <h3 class="project-title">Sistema de Gestión</h3>
-                            <p class="project-description">Software empresarial para automatización de procesos.</p>
-                            <a href="#" class="project-link">Ver Detalles</a>
+                            <h3 class="project-title">Una linea sutíl pero imponente</h3>
+                            <p class="project-description">No todo lo que impone tiene complicaciones, esta linea demuestra todo con tan poco.</p>
+                            <!--<a href="#" class="project-link">Ver Detalles</a>-->
                         </div>
                     </div>
                 </div>
 
                 <!-- Project 6 -->
-                <div class="col-md-6 col-lg-4">
+                <div class="col-md-6 col-lg-4 HONDA">
                     <div class="project-card">
-                        <img src="/api/placeholder/400/300" class="project-image" alt="Proyecto 6">
+                        <img src="../img/CBR-600-BLANCA.jpeg" class="project-image" alt="CBR600">
                         <div class="project-overlay">
-                            <h3 class="project-title">E-commerce</h3>
-                            <p class="project-description">Tienda en línea con integración de pagos y gestión de
-                                inventario.</p>
-                            <a href="#" class="project-link">Ver Detalles</a>
+                            <h3 class="project-title">Luce como nueva</h3>
+                            <p class="project-description">No estás soñando, es tu misma moto solo tiene los colores de linea
+                                .</p>
+                            <!--<a href="#" class="project-link">Ver Detalles</a>-->
                         </div>
                     </div>
                 </div>
@@ -195,26 +196,40 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
-        // Filter functionality
-        document.querySelectorAll('.filter-btn').forEach(button => {
-            button.addEventListener('click', () => {
-                // Remove active class from all buttons
-                document.querySelectorAll('.filter-btn').forEach(btn => {
-                    btn.classList.remove('active');
-                });
+    // Filter functionality
+    document.querySelectorAll('.filter-btn').forEach(button => {
+        button.addEventListener('click', () => {
+            // Remove active class from all buttons
+            document.querySelectorAll('.filter-btn').forEach(btn => {
+                btn.classList.remove('active');
+            });
 
-                // Add active class to clicked button
-                button.classList.add('active');
+            // Add active class to clicked button
+            button.classList.add('active');
 
-                // Get filter value
-                const filterValue = button.getAttribute('data-filter');
+            // Get filter value
+            const filterValue = button.getAttribute('data-filter');
 
-                // Here you would typically filter the projects
-                // For now, we'll just log the filter value
-                console.log('Filter:', filterValue);
+            // Select all project cards
+            const projects = document.querySelectorAll('.project-card');
+
+            // Loop through projects to show/hide based on filter
+            projects.forEach(project => {
+                // Get the parent column's classes (e.g., YAMAHA, HONDA)
+                const projectCategory = project.parentElement.classList;
+
+                if (filterValue === 'all' || projectCategory.contains(filterValue)) {
+                    // Show the project if it matches the filter
+                    project.parentElement.style.display = 'block';
+                } else {
+                    // Hide the project if it doesn't match
+                    project.parentElement.style.display = 'none';
+                }
             });
         });
-    </script>
+    });
+</script>
+
 </body>
 
 </html>
