--- a/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
+++ b/MoxxDesignsWebApp/src/main/webapp/pages/sobre-nosotros.html
@@ -129,7 +129,7 @@
                     <div class="team-card text-center">
                         <img src="/api/placeholder/300/300" class="card-img-top" alt="CEO">
                         <div class="card-body">
-                            <h5 class="card-title">Ana García</h5>
+                            <h5 class="card-title">Amós Olguin H.</h5>
                             <p class="card-text">CEO</p>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                     <div class="team-card text-center">
                         <img src="/api/placeholder/300/300" class="card-img-top" alt="CTO">
                         <div class="card-body">
-                            <h5 class="card-title">Carlos Ruiz</h5>
+                            <h5 class="card-title">Rosalba Quiroz P.</h5>
                             <p class="card-text">CTO</p>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                     <div class="team-card text-center">
                         <img src="/api/placeholder/300/300" class="card-img-top" alt="COO">
                         <div class="card-body">
-                            <h5 class="card-title">Laura Torres</h5>
+                            <h5 class="card-title">Amós Olguin Q.</h5>
                             <p class="card-text">COO</p>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                     <div class="team-card text-center">
                         <img src="/api/placeholder/300/300" class="card-img-top" alt="CFO">
                         <div class="card-body">
-                            <h5 class="card-title">Miguel Sánchez</h5>
+                            <h5 class="card-title">Adanahe Olguin Q.</h5>
                             <p class="card-text">CFO</p>
                         </div>
                     </div>
